avances con el inicio de sesion de google (aun no funciona)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DisaApp</string>
+    <string name="default_web_client_id">845196078772-emi47not08llppgm2pfmem3dtpkbdile.apps.googleusercontent.com</string>
 </resources>
